--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "leadout/jwt": "^1.0",
+        "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-query-builder": "^5.6"
     },
     "require-dev": {
